News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/Sprint_Reporting_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Weekly Analytic Snapshot for Sprint</description>
    <label>Sprint Reporting Snapshot</label>
    <nameField>
        <label>Sprint Reporting Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprint Reporting Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>