News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <label>Assigned To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>