News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/fields/Backlog_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item_Status__c</fullName>
    <label>Backlog Item Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>