News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <label>Blocked</label>
    <length>80</length>
    <type>Text</type>
</CustomField>