News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>80</length>
    <type>Text</type>
</CustomField>