News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <length>80</length>
    <type>Text</type>
</CustomField>