News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/fields/Sprint_Priority__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Priority__c</fullName>
    <label>Sprint Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>