News UAT/force-app/main/default/objects/Sprint_Reporting_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Title__c</columns>
    <columns>Backlog_Item_Status__c</columns>
    <columns>Sprint_Name__c</columns>
    <columns>Sprint_Priority__c</columns>
    <columns>Blocked__c</columns>
    <columns>Estimated_Effort__c</columns>
    <columns>Actual_Effort__c</columns>
    <columns>Project__c</columns>
    <columns>Release__c</columns>
    <columns>Assigned__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>